# hikyaku

./: .gitignore  CLAUDE.md  CNAME  Cargo.toml  README.md  build.rs  hikyaku-beta.flatpakref  hikyaku.flatpakref  justfile  summary  summary.idx  summary.idx.sig  summary.sig
.cargo/: config.toml.example
.github/workflows/: flatpak-publish-ollama.yml  flatpak-publish.yml  flatpak.yml
crates/timeline/: Cargo.toml
crates/timeline/src/: lib.rs  perf.rs  timeline.rs
crates/timeline/tests/: invariants.rs
data/: me.ramkrishna.hikyaku.desktop  me.ramkrishna.hikyaku.gschema.xml  me.ramkrishna.hikyaku.metainfo.xml
delta-indexes/BT/: 9iNAS3NoCJAytbJm01yoYh_2b79Qqg+o9wPSIwvwA.index
delta-indexes/EY/: NEYi1a1I5ttiwqagca7FDjHPkhrv9pFSlxpXK1BjI.index
delta-indexes/Iu/: +EaP1AZq2ysctVjIBTcHz20uXJPKeFmK2GaBeDcMc.index
delta-indexes/L2/: EVvUI_qZQcrLvLRcpSthecLqNVchQXcgdyaSwb59M.index
delta-indexes/YS/: ldurHbcdLk83WmXtPbZcsUBNlBOyHiODJqEqL6rAU.index
delta-indexes/dK/: UACv08m9r5DJgSs3zg2i6_af69n16GJsukQQE5ncM.index
delta-indexes/f0/: MS_7b3z8QH9fI4E43Vl_st9Vw8AtlOxtFUsr5_nYU.index
delta-indexes/j0/: +0QnnnVQLxzl0dikQo1RynxvhuulEH+vfjLDb6as4.index
delta-indexes/wN/: DBuSk8U0cyJ8YPg3Wb7+qDGRRQ9qW8WEbHCRmcrPM.index
deltas/BT/9iNAS3NoCJAytbJm01yoYh_2b79Qqg+o9wPSIwvwA/: 0  superblock
deltas/EY/NEYi1a1I5ttiwqagca7FDjHPkhrv9pFSlxpXK1BjI/: 0  superblock
deltas/Iu/+EaP1AZq2ysctVjIBTcHz20uXJPKeFmK2GaBeDcMc/: 0  superblock
deltas/L2/EVvUI_qZQcrLvLRcpSthecLqNVchQXcgdyaSwb59M/: 0  superblock
deltas/YS/ldurHbcdLk83WmXtPbZcsUBNlBOyHiODJqEqL6rAU/: 0  superblock
deltas/dK/UACv08m9r5DJgSs3zg2i6_af69n16GJsukQQE5ncM/: 0  superblock
deltas/f0/MS_7b3z8QH9fI4E43Vl_st9Vw8AtlOxtFUsr5_nYU/: 0  superblock
deltas/j0/+0QnnnVQLxzl0dikQo1RynxvhuulEH+vfjLDb6as4/: 0  superblock
deltas/wN/DBuSk8U0cyJ8YPg3Wb7+qDGRRQ9qW8WEbHCRmcrPM/: 0  superblock
flatpak/: cargo-sources.json  me.ramkrishna.hikyaku.Devel.json  me.ramkrishna.hikyaku.Ollama.json  me.ramkrishna.hikyaku.OpenVINO.json  me.ramkrishna.hikyaku.json
refs/heads/appstream/: x86_64
refs/heads/appstream2/: x86_64
src/: application.rs  avatar_worker.rs  bookmarks.rs  config.rs  directory.rs  lib.rs  local_unread.rs  main.rs  markdown.rs  markup_worker.rs  room_context.rs  spell_check.rs
src/intelligence/: gpu_detect.rs  mod.rs  ollama_manager.rs  watcher.rs
src/matrix/: client.rs  encryption.rs  event_channel.rs  mod.rs  room_cache.rs  verification.rs
src/models/: message_object.rs  mod.rs  notification_object.rs  rolodex_entry_object.rs  room_object.rs  timeline.rs
src/plugins/: community_safety.rs  mod.rs
src/plugins/ai/: mod.rs
src/plugins/community_flair/: mod.rs
src/plugins/community_health/: mod.rs
src/plugins/media_rewrite/: mod.rs
src/plugins/motd/: mod.rs
src/widgets/: bookmarks_overview.rs  login_page.blp  login_page.rs  message_row.blp  message_row.rs  message_view.blp  message_view.rs  mod.rs  notification_manager.rs  onboarding_page.blp  onboarding_page.rs  room_list_view.rs  room_row.blp  room_row.rs  verification_dialog.rs  window.rs
summaries/: 262b3acbe18884d6fa46c9e77be597a66de914156c009331c18000b5b64a3aa9-ec26602bafc648cfd3bfc30641af97dd17f4faad0e408eb0bd3211374ba42399.delta  59458f89b6a9c58901587846736e928e8ec19d9d2c499fddf7d0efcd23e9229c-ec26602bafc648cfd3bfc30641af97dd17f4faad0e408eb0bd3211374ba42399.delta  780ff5d663b2a7a266ecf66ac6d2f4e46cb260281fbed69a6e34ce1a4980cc67-76ea9b1efc4df83783c4856e7600cc72b3a151ac906e1db1ff6bc8aa53c06175.delta  b7c3f9c0e87ec5d388aa7d2f503f5c0b66db00e590d4b9fdaf16b45968defc0e-76ea9b1efc4df83783c4856e7600cc72b3a151ac906e1db1ff6bc8aa53c06175.delta  bf89427eb820782915ef69bd19005c1fd974bdc1dab6d0ead31fb3bf154a25d5-ff824c0fbce95ddbb394f947f5ca74fbcb10e43ec7d85be0f02a37adcc7fa199.delta  cd1a0595de1070436e28a03bc2265b3fa80f13bdb2d080745e45be5be7da4f0d-ff824c0fbce95ddbb394f947f5ca74fbcb10e43ec7d85be0f02a37adcc7fa199.delta
(+6 files in other folders)
