[package]
name = "matx"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { package = "gtk4", version = "0.9", features = ["v4_14", "blueprint"] }
adw = { package = "libadwaita", version = "0.7", features = ["v1_5"] }
glib = "0.20"
gio = "0.20"

matrix-sdk = { version = "0.10", default-features = false, features = ["e2e-encryption", "sqlite", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
async-channel = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

tracing = "0.1"
tracing-subscriber = "0.3"

dirs = "6"
futures-util = "0.3"
oo7 = { version = "0.3", default-features = false, features = ["tokio", "native_crypto"] }
