[package]
name = "hikyaku"
version = "0.1.0"
edition = "2021"
default-run = "hikyaku"

[features]
default = ["ai", "rolodex", "pinning", "motd"]
## AI summaries via Ollama + semantic interest watcher (fastembed).
## Use ort-download-binaries for development builds (cargo run).
## Use ort-load-dynamic for Flatpak builds — ORT is dlopen'd at runtime.
ai = ["dep:fastembed"]
ai-flatpak = ["ai", "dep:ort", "fastembed/ort-load-dynamic"]
## Community health monitor: emotion scoring per room for community managers.
## Depends on the same embedding model as the AI watcher.
community-health = ["dep:fastembed"]
## Personal contact book with notes and @-completion.
rolodex = []
## Local message bookmarks (not synced to the Matrix server).
pinning = []
## Room topic change tracker — toasts and sidebar icon.
motd = []
## Development build indicator: amber app icon + rainbow titlebar stripe.
## Used by the beta flatpak branch. Never set in the stable build.
devel = []

[dependencies]
gtk = { package = "gtk4", version = "0.9", features = ["v4_14", "blueprint"] }
adw = { package = "libadwaita", version = "0.7", features = ["v1_6"] }
glib = "0.20"
gio = "0.20"

matrix-sdk = { version = "0.10", default-features = false, features = ["e2e-encryption", "sqlite", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
async-channel = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

dirs = "6"
rusqlite = "0.32"
fastembed = { version = "4", optional = true, default-features = false, features = ["hf-hub", "ort-download-binaries"] }
# ort is pulled in by fastembed; expose it directly so we can call ort::init()
# for OpenVINO EP registration when the Flatpak extension is present.
ort = { version = "2.0.0-rc.9", optional = true, default-features = false }
mime = "0.3"
soup3 = "0.7"
futures-util = "0.3"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
sourceview5 = "0.9"
enchant = "0.3"
# Used only in matrix/client.rs for media download, which runs on the tokio thread.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
oo7 = { version = "0.3", default-features = false, features = ["tokio", "native_crypto"] }
